--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'realm-android'
 }
 
 android {
@@ -35,6 +36,9 @@ android {
     buildFeatures {
         viewBinding true
     }
+    realm {
+        syncEnabled = true
+    }
 }
 
 dependencies {
@@ -60,4 +64,5 @@ dependencies {
     testImplementation 'junit:junit:5.8.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'joda-time:joda-time:2.10.13'
 }
